--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "express": "^4.17.2",
     "mongoose": "^6.1.5",
     "slugify": "^1.6.5"
+  },
+  "devDependencies": {
+    "csv-parse": "^5.0.4",
+    "csvtojson": "^2.0.10",
+    "JSONStream": "^1.3.5"
   }
 }
